[package]
name = "neotron-os"
version = "0.8.0"
authors = [
    "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
    "The Neotron Developers"
]
edition = "2018"
description = "The Neotron Operating System"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/neotron-compute/Neotron-OS"

[[bin]]
name = "flash1002"
test = false
bench = false

[[bin]]
name = "flash0802"
test = false
bench = false

[[bin]]
name = "flash0002"
test = false
bench = false

[lib]
crate-type = ["rlib", "cdylib"]
required-features = ["native-log"]

[profile.release]
lto = true
debug = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
chrono = { version = "0.4", default-features = false }
embedded-graphics = "0.8.1"
embedded-sdmmc = { version = "0.7", default-features = false }
heapless = "0.7"
menu = "0.3"
neotron-api = "0.2"
neotron-common-bios = "0.12.0"
neotron-loader = "0.1"
pc-keyboard = "0.7"
postcard = "1.0"
r0 = "1.0"
serde = { version = "1.0", default-features = false }
tinybmp = { git = "https://github.com/embedded-graphics/tinybmp", rev="247718592bb7a1904f4846e5f1adef87d33e1781" }
vte = "0.12"

[features]
lib-mode = []
